<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".log.logIn_activity">

    <LinearLayout
        android:id="@+id/linear_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="75dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/input_selector"
            android:drawableLeft="@drawable/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#98acf8"
            android:textColorHint="#7D7D7D" />

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/input_selector"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="#98acf8"
            android:textColorHint="#7D7D7D" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input_selector"
            android:text="LogIn"
            app:backgroundTint="#4997d0" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />
    <TextView
        android:id="@+id/helloAgain"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:text="LOGIN"
        android:textColor="#00ACC1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="40dp"
        android:text="Don't have an accout ? Click "
        android:textColor="#505050"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="#162E87"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2_2" />

</androidx.constraintlayout.widget.ConstraintLayout>