<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".patient.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editBtn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias=".93"
            android:background="@drawable/ic_baseline_settings_24"
            android:backgroundTint="@color/black"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titlee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="PROFILE"
            android:textColor="#4997d0"
            android:textSize="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titlee"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="-32dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/UserImage"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/input_selector"
                    android:src="@drawable/person_add"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLabel"
                    style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/name"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="3dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/UserImage">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/NameEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLabel"
                    style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:hint="Email"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="3dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nameLabel"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/PhoneNumberLabel"
                    style="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:boxStrokeWidth="3dp"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/PhoneNumberEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/birthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/purple_500"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:text="1/11/1111"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/PhoneNumberLabel" />

                <Button
                    android:id="@+id/sendBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#673AB7"
                    android:padding="10dp"
                    android:text="send email"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/UpdateButton" />

                <Button
                    android:id="@+id/UpdateButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="32dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_selector"
                    android:hint="@string/Save"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="#98acf8"
                    android:textColorHint="#fff"
                    android:textSize="20sp"
                    app:backgroundTint="#4997d0"
                    app:layout_constraintTop_toBottomOf="@id/birthDate" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>